--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,15 +11,17 @@ jobs:
 
     steps:
       # Checkout your GitHub profile repository
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
 
       # Generate the Snake animation from the contribution graph
-      - name: Generate Snake Game from GitHub contribution grid
-        uses: Platane/snk@v3
+      #- name: Generate Snake Game from GitHub contribution grid
+      #  uses: Platane/snk@v3
         with:
           github_user_name: misbah7172
-          outputs: dist/snake.svg
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       # Commit and push the changes
       - name: Commit and push changes
